# neuralC

./: .gitignore  CMakeLists.txt  Layer.cxx  Layer.h  Mainroot.cxx  NeuralNet.cxx  NeuralNet.h  README.md  Synapse.cxx  Synapse.h  SynapseLayer.cxx  SynapseLayer.h  compile.C  main.cpp  perceptron.cxx  perceptron.h  potentials.h  run_dataset.cxx  run_plot.cxx  run_xray.cxx  test.cxx  topology.cxx  topology.h
NeuralAnalyzer/: CMakeLists.txt  NeuralAnalyzer.cxx  NeuralAnalyzer.h
XRayMachine/: CMakeLists.txt  XRayMachine.cxx  XRayMachine.h
tests/: CMakeLists.txt  netTest.cxx
